...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/keyOneTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keyTwoTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/keyThreeTV"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/custom_keyboard_key_bg"
                android:gravity="center"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/keyFourTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyFiveTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keySixTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/keySevenTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="7"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyEightTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
                        android:text="8"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/keyNineTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.34"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/keyZeroTV"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:background="@drawable/custom_keyboard_key_bg"
                        android:gravity="center"
...
