<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:overScrollMode="never"-->
    <!--        android:scrollbars="none">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_21sdp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImgLG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:contentDescription="@string/mpos_logo"
            android:src="@drawable/ic_login_mpos" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llBoxStroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/outline_box_unfocused"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/opensans_semibold"
                        android:text="@string/tid"
                        android:textColor="@color/primary_black"
                        android:textSize="@dimen/_12ssp" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="wrap_content"
                        android:background="@color/light_gray" />

                </LinearLayout>

                <EditText
                    android:id="@+id/tidET"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:digits="0123456789"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/terminal_id"
                    android:inputType="number|textNoSuggestions"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:contentDescription="tidET"
                    android:paddingVertical="@dimen/_14sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:singleLine="true"
                    android:textColor="@color/primary_black"
                    android:textColorHint="@color/light_gray"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvUpperHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:fontFamily="@font/opensans_semibold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/terminal_id"
                android:textColor="@color/primary_black"
                android:textSize="@dimen/_9ssp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/llBoxStroke"
                app:layout_constraintStart_toStartOf="@+id/llBoxStroke"
                app:layout_constraintTop_toTopOf="@+id/llBoxStroke" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llTIDError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:contentDescription="@string/error"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/tvTIDError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/error_red"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTIL"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColorHint="@color/light_gray"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:boxStrokeColor="@color/primary_green"
                app:errorIconDrawable="@null"
                app:hintTextColor="@color/primary_green"
                app:passwordToggleTint="@color/dark_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_43sdp"
                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                    android:digits="@string/password_characters"
                    android:fontFamily="@font/opensans_semibold"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:contentDescription="passwordET"
                    android:longClickable="false"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:padding="@dimen/_14sdp"
                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                    android:singleLine="true"
                    android:textColor="@color/primary_black"
                    android:textColorHint="@color/light_gray"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/endIconIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="endIconIV"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_eyeclose"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/passwordErrorLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:contentDescription="@string/error"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/passwordErrorTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:fontFamily="@font/opensans_regular"
                android:textColor="@color/error_red"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/button_bg_inactive"
            android:fontFamily="@font/opensans_bold"
            android:contentDescription="tvButton"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <!--    </ScrollView>-->

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:contentDescription="@string/back"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_cross" />


</RelativeLayout>