...
                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:gravity="center">

                                        <EditText
                                            android:id="@+id/searchET"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_marginStart="@dimen/_8sdp"
                                            android:layout_marginEnd="@dimen/_5sdp"
                                            android:layout_weight="1"
                                            android:background="@android:color/transparent"
...
                                <ScrollView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:scrollbars="none">

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/txnListRV"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="@dimen/_14sdp" />
                                </ScrollView>


...
