...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/todayBatchCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="todayBatchCV"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_1sdp"
...
