<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/onboard_bg_mask"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ICONClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/log_in"
            android:src="@drawable/ic_onboard_mpos" />

        <TextView
            android:id="@+id/tvButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:background="@drawable/button_bg_white"
            android:contentDescription="tvButton"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/primary_green"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</RelativeLayout>